gcc/

2008-02-25  H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/39241
	* jump.c (rtx_renumbered_equal_p): Remove 2 superfluous calls
	to subreg_offset_representable_p.

gcc/testsuite/

2008-02-25  H.J. Lu  <hongjiu.lu@intel.com>

	PR rtl-optimization/39241
	* gcc.dg/torture/pr39241.c: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@144430 138bc75d-0d04-0410-961f-82ee72b054a4